styles/pages/_hero.scss
.hero {
  @extend %page-section;
  height: 100%;
  background-image: url('img/01_head_lg.jpg');
  background-size: auto 150%;
  background-position-x: background-focus(100, 79, 50);
  
  // background-position: right 0 top var(--navbar-height);
  // `background-attachment: fixed;
  // height: calc(972/1920 * var(--background-size) - var(--navbar-height));
  // TODO: If removing background-attachment: fixed, then also remove height line above

  @include tablet {
    background-position-x: background-focus(100, 87, 50);
  }
  @include desktop {
    background-size: cover;
  }

  .radically-different {
    --text-size: 26vw;
    $text-size: 14vw;
    position: relative;
    top: 54%;
    font-family: $font-stack-bold;
    font-size: var(--text-size);
    text-transform: uppercase;

    @include tablet {
      --text-size: 23vw;
      top: 62%;
    }
    @include desktop {
      --text-size: 14vw;
      top: 11%
    }

    > div {
      line-height: var(--text-size);
      position: relative;
      height: var(--text-size);
      width: 95vw;
      margin-left: -1.2vw;

      @include tablet {
        width: 83vw;
      }
      @include desktop {
        width: 50vw;
      }
    }

    .text-overlay {
      @extend %text-overlay;
      top: 6vw;
      left: 0;
      height: 12vw;
      opacity: 0.9;

      // TODO: convert these into a "coverage ratio" based on the --text-size variable
      @include tablet {
        height: 10vw;
      }
      @include desktop {
        top: 3vw;
        height: 7vw;
      }
    }
  }

  .anti-establishment {
    --text-size: 7vw;
    $text-size: 4vw;
    font-family: $font-stack-bold;
    font-size: var(--text-size);
    text-transform: uppercase;
    position: absolute;
    top: 21.5%;
    right: 0%;
    display: inline-block;
    overflow: hidden;

    @include tablet {
      top: 13.5%;
    }

    @include desktop {
      --text-size: 4vw;
      top: 11.5%;
    }

    > div {
      line-height: var(--text-size);
      position: relative;
      height: calc(var(--text-size) + 1vw);
      width: 37.5vw;
      text-align: justify;
      padding-left: .5vw;

      @include desktop {
        width: 21vw;
        height: var(--text-size);
      }
    }

    .text-overlay {
      @extend %text-overlay;
      top: 3.25vw;
      right: 0;
      height: 0.5vw;
      opacity: 1;

      @include desktop {
        top: 1.5vw;
      }
    }
  }

  .call-to-action-bar {
    --cta-height: 15vmin;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: var(--cta-height);
    background-color: rgba(240, 20, 20, 0.9);
    z-index: 5;

    @include desktop {
      --cta-height: 8vmin;
    }

    .button {
      --button-height: calc(var(--cta-height) / 2);
      width: max-content;
      color: $red-base;
      background-color: white;
      font-weight: bold;
      font-size: calc(var(--cta-height) / 4);
    }
  }

  .red-line {
    position: absolute;
    right: 0;
    bottom: 0;
    background-color: $red-base;
    width: calc(600/1920 * 100%);
    height: calc(50/1920 * 100%);

    @include tablet {
      width: calc(300/1920 * 100%);
      height: calc(41/1920 * 100%);
    }
    @include desktop {
      width: calc(190/1920 * 100%);
      height: calc(41/1920 * 100%);
    }
  }
}

